// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`magic __CLASS__ 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Magic {
        "kind": "magic",
        "raw": "__CLASS__",
        "value": "__CLASS__",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`magic __DIR__ 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Magic {
        "kind": "magic",
        "raw": "__DIR__",
        "value": "__DIR__",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`magic __FILE__ 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Magic {
        "kind": "magic",
        "raw": "__FILE__",
        "value": "__FILE__",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`magic __FUNCTION__ 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Magic {
        "kind": "magic",
        "raw": "__FUNCTION__",
        "value": "__FUNCTION__",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`magic __LINE__ 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Magic {
        "kind": "magic",
        "raw": "__LINE__",
        "value": "__LINE__",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`magic __LINE__ lowercase 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Magic {
        "kind": "magic",
        "raw": "__line__",
        "value": "__LINE__",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`magic __METHOD__ 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Magic {
        "kind": "magic",
        "raw": "__METHOD__",
        "value": "__METHOD__",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`magic __NAMESPACE__ 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Magic {
        "kind": "magic",
        "raw": "__NAMESPACE__",
        "value": "__NAMESPACE__",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`magic __TRAIT__ 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Magic {
        "kind": "magic",
        "raw": "__TRAIT__",
        "value": "__TRAIT__",
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
